Upgraded to java language version 23 and removed string templates